[project]
name = "trading-strategy-center"
version = "0.1.0"
description = "三系统融合量化交易策略中心 — Guanshan / Chufeng / Tinghai"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery>=5.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "ta>=0.11",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-multipart>=0.0.6",
    "requests>=2.31",
    "empyrical>=0.5.5",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "tensorflow>=2.13",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "hmmlearn>=0.3",
    "arch>=6.0",
    "pmdarima>=2.0",
    "prophet>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
